RESOLVED FIXED50911
[Qt] fast/loader/user-stylesheet-fast-path.html fails
https://bugs.webkit.org/show_bug.cgi?id=50911
Summary [Qt] fast/loader/user-stylesheet-fast-path.html fails
Csaba Osztrogonác
Reported 2010-12-13 03:52:45 PST
http://trac.webkit.org/changeset/73893 made this test to be a platform independent test and unfortunately it fails on Qt. patch to get detailed results: ------------------------------- --- a/LayoutTests/fast/loader/user-stylesheet-fast-path.html +++ b/LayoutTests/fast/loader/user-stylesheet-fast-path.html @@ -24,7 +24,7 @@ document.body.offsetTop; var result = getComputedStyle(document.body).fontSize == obj.size; - document.write((result == obj.result ? "PASS" : "FAIL") + " " + obj.size + "<br>"); + document.write((result == obj.result ? "PASS" : "FAIL") + " expected:" + obj.result + " actual:" + result + " "+ obj.size + " " + getComputedStyle(document.body).fontSize+ "<br>"); layoutTestController.setUserStyleSheetLocation(""); } DRT result: ------------ PASS expected:true actual:true 100px 100px PASS expected:true actual:true 110px 110px FAIL expected:true actual:false 120px 16px PASS expected:true actual:true 130px 130px PASS expected:false actual:false 140px 16px PASS expected:false actual:false 150px 16px PASS expected:false actual:false 160px 16px
Attachments
Patch (2.70 KB, patch)
2011-02-27 06:28 PST, Patrick R. Gansterer
no flags
Patrick R. Gansterer
Comment 1 2011-02-27 06:28:36 PST
Andreas Kling
Comment 2 2011-02-27 08:04:20 PST
Comment on attachment 83974 [details] Patch Awesome, thanks for fixing!
WebKit Commit Bot
Comment 3 2011-02-27 09:59:50 PST
Comment on attachment 83974 [details] Patch Clearing flags on attachment: 83974 Committed r79820: <http://trac.webkit.org/changeset/79820>
WebKit Commit Bot
Comment 4 2011-02-27 09:59:55 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 5 2011-02-27 10:40:19 PST
The commit-queue encountered the following flaky tests while processing attachment 83974 [details]: http/tests/websocket/tests/simple.html bug 55325 (author: abarth@webkit.org) The commit-queue is continuing to process your patch.
Note You need to log in before you can comment on or make changes to this bug.