2011-02-27  Patrick Gansterer  <paroga@webkit.org>

Reviewed by Andreas Kling.

        [Qt] fast/loader/user-stylesheet-fast-path.html fails
        https://bugs.webkit.org/show_bug.cgi?id=50911

        * platform/qt/Skipped:  Unskip test which is now passing.
2011-02-27  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] fast/loader/user-stylesheet-fast-path.html fails
        https://bugs.webkit.org/show_bug.cgi?id=50911

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setUserStyleSheetLocation):
        Use QUrl::fromEncoded since the passed string is already encoded.

Canonical link: https://commits.webkit.org/69737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79820 268f45cc-cd09-0410-ab3c-d52691b4dbfc